Fix icon alignments

--- a/src/components/bookmark/Bookmark.scss
+++ b/src/components/bookmark/Bookmark.scss
@@ -28,7 +28,8 @@
 }
 
 .bookmark-row .button-expand {
-  margin-left: auto;
+  margin-left: 10px;
+  margin-right: -10px;
   margin-top: 3px;
 }
 
