--- a/src/components/bucket/Bucket.scss
+++ b/src/components/bucket/Bucket.scss
@@ -28,6 +28,12 @@
   border-bottom: 1px solid var(--color-border);
   font-weight: 700;
   font-size: 1.6rem;
+
+  .icon {
+    width: 13px;
+    height: 13px;
+    color: var(--color-text-offset)
+  }
 }
 
 .bucket-header:first-child {
