--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1px 4px;
+  padding: 2px 4px 0 4px;
 
   background-color: transparent;
   color: inherit;
