--- a/src/components/collection/Collection.scss
+++ b/src/components/collection/Collection.scss
@@ -16,6 +16,7 @@
   .icon {
     width: 18px;
     height: 18px;
+    top: 2px;
   }
 }
 
